tests/rosetta/transpiler/Rust/file-size.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:47:2
   |
47 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:53:2
   |
53 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:57:28
   |
57 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
57 -     let duration_us: i64 = ((_end - _start) / 1000);
57 +     let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:58:29
   |
58 |     let memory_bytes: i64 = (_end_mem - _start_mem);
   |                             ^                     ^
   |
help: remove these parentheses
   |
58 -     let memory_bytes: i64 = (_end_mem - _start_mem);
58 +     let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0277]: the trait bound `String: Borrow<&str>` is not satisfied
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:42:24
   |
42 |     if fs.contains_key(&path) {
   |           ------------ ^^^^^ the trait `Borrow<&str>` is not implemented for `String`
   |           |
   |           required by a bound introduced by this call
   |
   = help: the trait `Borrow<&_>` is not implemented for `String`
           but trait `Borrow<_>` is implemented for it
   = help: for that trait implementation, expected `str`, found `&str`
note: required by a bound in `HashMap::<K, V, S>::contains_key`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1137:5

error[E0277]: the trait bound `String: Borrow<&str>` is not satisfied
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:43:27
   |
43 |         println!("{}", fs[&path].to_string());
   |                           ^^^^^ the trait `Borrow<&str>` is not implemented for `String`
   |
   = help: the trait `Borrow<&_>` is not implemented for `String`
           but trait `Borrow<_>` is implemented for it
   = help: for that trait implementation, expected `str`, found `&str`
   = note: required for `HashMap<String, i64>` to implement `Index<&&str>`

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-size.rs:50:15
   |
50 |     fs.insert("input.txt".clone(), 123);
   |        ------ ^^^^^^^^^^^^-----^^
   |        |      |           |
   |        |      |           help: try using a conversion method: `to_string`
   |        |      expected `String`, found `&str`
   |        arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error: aborting due to 3 previous errors; 4 warnings emitted

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
